Fixed match hover in dark mode

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -37,3 +37,7 @@
 .menu-item:focused, .menu-item:focused > .label {
     -fx-background-color: #333333;
 }
+
+.match-label {
+    -fx-background-color: #FFFFFF;
+}
